next release
------------
-new component: predict_prokaryotic_gene_function
-Prokaryotic_Annotation_Pipeline: moved tmhmm and lipoprotein_motif earlier in the pipeline so they can be used in functional prediction step
-CHANGELOG: now in reverse chronological order

ergatis-v2r7b1
--------------
-geneidgff2bsml.pl: now correctly converts to interbase
-pipeline list page for a project now shows project code
-changed all /usr/local/bin/perl paths to /usr/bin/perl in cgi-bin
-bugfix: tmhmm component wasn't actually passing OTHER_OPTS variable
-bugfix: tmhmm2bsml was failing when html anchors in output were commented out by tmhmm
-bugfix: ps_scan component how handles multi-fasta input files correctly
-changed glimmer3 to read executable paths from software.config
-translate_sequence: removed hard-coded paths, eliminated sh wrapper
-fixed sf.net bug 1843655: save_component.cgi was failing on values containing + symbol
-standardized the perl path to /usr/bin/perl in ergatis/src/perl (though they're mostly run by wrappers anyway)
-brought default project.config inline with ergatis.ini default values
-made PROJECT_CODE optional, can now omit value
-bugfix: create_iterator_list.pl was using Workflow::Logger instead of Ergatis::Logger
-changed glimmer3 to read executable paths from software.config
-translate_sequence: removed hard-coded paths, eliminated sh wrapper
-train_for_glimmer3_iteration: removed hard-coded paths for elph and glimmer tools
-added C source code for cluster - required for comparative components
-promote_gene_prediction: resolved duplicate -p short options
-infernal: updated to latest version (0.81), generalized, removed nonused database (DBI) info options
-aat_aa: moved matrix param into software.config
-SavedPipeline.pm: fixed - was missing id_repository param
-ergatis.ini: added grid_enabled option, allowing toggling of grid support
-converted genscan and genscan-plus to version 2

ergatis-v2r6b2
--------------